// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform attributes Should transform boolean prop 1`] = `
"[\\"<0~UniqueId>\\", \\"div\\", {
  focused: true
}, undefined];"
`;

exports[`transform attributes Should transform cssx var 1`] = `
"[\\"<0~UniqueId>\\", \\"div\\", {
  \\"css:$var\\": true
}, undefined];"
`;

exports[`transform attributes Should transform different props variations 1`] = `
"[\\"<0~UniqueId\\" + \\"~\\" + \\"Key\\" + \\">\\", \\"div\\", {
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
}, undefined];"
`;

exports[`transform attributes Should transform different props with ref 1`] = `
"[\\"<0~UniqueId\\" + \\"~\\" + \\"Key\\" + \\">\\", \\"div\\", {
  ref: myRef,
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
}, undefined];"
`;

exports[`transform attributes Should transform different props with ref onMount onUnmount 1`] = `
"[\\"<0~UniqueId\\" + \\"~\\" + \\"Key\\" + \\">\\", \\"div\\", {
  ref: myRef,
  onMount: onMount,
  onUnmount: onUnmount,
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
}, undefined];"
`;

exports[`transform attributes Should transform key prop 1`] = `"[\\"<0~UniqueId\\" + \\"~\\" + \\"Key\\" + \\">\\", \\"div\\", {}, undefined];"`;

exports[`transform attributes Should transform namespaced name 1`] = `
"[\\"<0~UniqueId>\\", \\"div\\", {
  \\"css:blue\\": true
}, undefined];"
`;

exports[`transform attributes Should transform props spread 1`] = `
"[\\"<0~UniqueId>\\", \\"div\\", { ...props
}, undefined];"
`;

exports[`transform attributes Should transform props with expressions 1`] = `
"[\\"<0~UniqueId>\\", \\"div\\", {
  prop1: 1 + 1
}, undefined];"
`;

exports[`transform attributes Should transform simple props 1`] = `
"[\\"<0~UniqueId>\\", \\"div\\", {
  prop1: \\"value1\\"
}, undefined];"
`;
